--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ h5 a:hover {
   color: gray;
   /* text-shadow: gray 0px 0px 2px;*/
 }
+#prixtotal {
+  margin-left: 6px;
+  color: gray;
+}
 
 /******************************************fealsdet************************************/
 article img {
