--- a/css/style3.css
+++ b/css/style3.css
@@ -104,14 +104,18 @@ footer {
   font-weight: 600;
 }
 
-/* .notification {
-    background-color: #513e35;
-    font-size: 1.5rem;
+#notification {
+  z-index: 2;
+    background-color:#cfa340;
+    font-size: 0.75rem;
     color: #fff;
     text-align: center;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     border-radius: 100%;
-    position: absolute; /* changed */
+    position: absolute;
+    margin-top: -4px; 
+    margin-left: -7px;
+}/* changed */
 /* top: -5px; /* changed */
-/* left: 18px; changed*/
+/* left: 18px; changed
