--- a/css/style2.css
+++ b/css/style2.css
@@ -5,22 +5,35 @@
     margin: 10px 50px 10px 50px;
     background-color: #e7d4cf;
   }
-
-  @media screen and (min-width: 1200px) {
-    #coeur {
-      padding-left: 70px;
-    }
-    /* main video {
-        width: 60%;
-      } */
-    /* main .divvideo {
-        margin: 20px 200px 0px 200px;
-      } */
+}
+@media screen and (min-width: 1200px) {
+  #coeur {
+    padding-left: 70px;
   }
 }
-@media screen and(max-width:500px) {
-  #photo2 {
-    margin-top: 10px;
-    padding: 0px;
+@media screen and (min-width: 1281px) {
+  fieldset .f1 #photo2 {
+    margin-top: -320px;
+  }
+}
+
+@media all and (min-width: 1159px) and (max-width: 1280px) {
+  fieldset .f1 #photo2 {
+    margin-top: -280px;
+  }
+}
+@media all and (min-width: 1000px) and (max-width: 1158px) {
+  fieldset .f1 #photo2 {
+    margin-top: -250px;
+  }
+}
+@media all and (min-width: 501px) and (max-width: 999px) {
+  fieldset .f1 #photo2 {
+    margin-top: -345px;
+  }
+}
+@media all and (min-width: 450px) and (max-width: 500px) {
+  fieldset .f1 #photo2 {
+    margin-top: -460px;
   }
 }
