--- a/css/style3.css
+++ b/css/style3.css
@@ -12,11 +12,11 @@ button {
 
 #photo2 {
   z-index: 2;
-  margin-top: -330px;
+  margin-top: -350px;
 
   height: 100%;
   width: 100%;
-  padding-top: 7px;
+  padding-top: 0px;
 }
 #photo1 {
   cursor: pointer;
@@ -106,16 +106,14 @@ footer {
 
 #notification {
   z-index: 2;
-    background-color:#cfa340;
-    font-size: 0.75rem;
-    color: #fff;
-    text-align: center;
-    width: 18px;
-    height: 18px;
-    border-radius: 100%;
-    position: absolute;
-    margin-top: -4px; 
-    margin-left: -7px;
-}/* changed */
-/* top: -5px; /* changed */
-/* left: 18px; changed
+  background-color: #cfa340;
+  font-size: 0.75rem;
+  color: #fff;
+  text-align: center;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  position: absolute;
+  margin-top: -2px;
+  margin-left: -13px;
+}
