--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,6 @@
 /*@media queries///////////////////////////////////////////////////////*/
 
-@media screen and (min-width: 426px) /*and (max-width: 1500px) */ {
+@media screen and (min-width: 426px) {
   nav .divbar {
     margin: 10px 50px 10px 50px;
     background-color: #e7d4cf;
